# src/main/kotlin/io/critica/application/lobby/request/DeleteLobby.kt
@@ -1,0 +1,5 @@
+package io.critica.application.lobby.request
+
+data class DeleteLobby(
+    val id: Int,
+)
