# src/main/kotlin/io/critica/application/lobby/request/GetLobby.kt
@@ -1,0 +1,5 @@
+package io.critica.application.lobby.request
+
+data class GetLobby(
+    val id: Int,
+)
